--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d2a27f">  <td>23/09/16 09:57:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test4.c()[pri:0, instance:com.UnitTesting.Test4@2d52216b]">c</td> 
-  <td>main@1399794302</td>   <td></td> </tr>
-<tr bgcolor="d2a27f">  <td>23/09/16 09:57:45</td>   <td>20</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test4.d()[pri:0, instance:com.UnitTesting.Test4@2d52216b]">d</td> 
-  <td>main@1399794302</td>   <td></td> </tr>
+<tr bgcolor="836cb8">  <td>23/09/18 09:08:15</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Base.beforeTest()[pri:0, instance:before_after.Test_3@53fe15ff]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2144665602</td>   <td></td> </tr>
+<tr bgcolor="d2a27f">  <td>23/09/18 09:08:15</td>   <td>22</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_3.script()[pri:0, instance:before_after.Test_3@53fe15ff]">script</td> 
+  <td>main@2144665602</td>   <td></td> </tr>
+<tr bgcolor="836cb8">  <td>23/09/18 09:08:15</td>   <td>21</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.login()[pri:0, instance:before_after.Test_3@53fe15ff]">&gt;&gt;login</td> 
+<td>&nbsp;</td>  <td>main@2144665602</td>   <td></td> </tr>
+<tr bgcolor="836cb8">  <td>23/09/18 09:08:15</td>   <td>30</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.logOut()[pri:0, instance:before_after.Test_3@53fe15ff]">&lt;&lt;logOut</td> 
+<td>&nbsp;</td>  <td>main@2144665602</td>   <td></td> </tr>
+<tr bgcolor="836cb8">  <td>23/09/18 09:08:15</td>   <td>13</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.launchBrowser()[pri:0, instance:before_after.Test_3@53fe15ff]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2144665602</td>   <td></td> </tr>
+<tr bgcolor="836cb8">  <td>23/09/18 09:08:15</td>   <td>32</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.closeBrowser()[pri:0, instance:before_after.Test_3@53fe15ff]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2144665602</td>   <td></td> </tr>
+<tr bgcolor="836cb8">  <td>23/09/18 09:08:15</td>   <td>34</td> <td>&nbsp;</td><td title="&lt;&lt;Base.afterTest()[pri:0, instance:before_after.Test_3@53fe15ff]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2144665602</td>   <td></td> </tr>
 </table>
