--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,18 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>before_after.Test_3</td>
+<td>co.VTiger.TestCases.TC_01_CreateOrganizationTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>script_1</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>script</td>
+<td>createOrg</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -29,20 +25,12 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>login</td>
+<td>loginToApp</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>logOut</td>
-<td>&nbsp;</td></tr>
-<tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>closeBrowser</td>
-<td>&nbsp;</td></tr>
 </table>
