--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,18 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="836cb8">  <td>23/09/18 09:08:15</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Base.beforeTest()[pri:0, instance:before_after.Test_3@53fe15ff]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2144665602</td>   <td></td> </tr>
-<tr bgcolor="d2a27f">  <td>23/09/18 09:08:15</td>   <td>22</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_3.script()[pri:0, instance:before_after.Test_3@53fe15ff]">script</td> 
-  <td>main@2144665602</td>   <td></td> </tr>
-<tr bgcolor="836cb8">  <td>23/09/18 09:08:15</td>   <td>21</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.login()[pri:0, instance:before_after.Test_3@53fe15ff]">&gt;&gt;login</td> 
-<td>&nbsp;</td>  <td>main@2144665602</td>   <td></td> </tr>
-<tr bgcolor="836cb8">  <td>23/09/18 09:08:15</td>   <td>30</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.logOut()[pri:0, instance:before_after.Test_3@53fe15ff]">&lt;&lt;logOut</td> 
-<td>&nbsp;</td>  <td>main@2144665602</td>   <td></td> </tr>
-<tr bgcolor="836cb8">  <td>23/09/18 09:08:15</td>   <td>13</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.launchBrowser()[pri:0, instance:before_after.Test_3@53fe15ff]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2144665602</td>   <td></td> </tr>
-<tr bgcolor="836cb8">  <td>23/09/18 09:08:15</td>   <td>32</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.closeBrowser()[pri:0, instance:before_after.Test_3@53fe15ff]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2144665602</td>   <td></td> </tr>
-<tr bgcolor="836cb8">  <td>23/09/18 09:08:15</td>   <td>34</td> <td>&nbsp;</td><td title="&lt;&lt;Base.afterTest()[pri:0, instance:before_after.Test_3@53fe15ff]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2144665602</td>   <td></td> </tr>
+<tr bgcolor="d2a27f">  <td>23/09/20 09:30:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchBrowser()[pri:0, instance:co.VTiger.TestCases.TC_01_CreateOrganizationTest@449a4f23]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1464191502</td>   <td></td> </tr>
+<tr bgcolor="939c60">  <td>23/09/20 09:30:11</td>   <td>8378</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01_CreateOrganizationTest.createOrg()[pri:0, instance:co.VTiger.TestCases.TC_01_CreateOrganizationTest@449a4f23]">createOrg</td> 
+  <td>main@1464191502</td>   <td></td> </tr>
+<tr bgcolor="d2a27f">  <td>23/09/20 09:30:06</td>   <td>3596</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.loginToApp()[pri:0, instance:co.VTiger.TestCases.TC_01_CreateOrganizationTest@449a4f23]">&gt;&gt;loginToApp</td> 
+<td>&nbsp;</td>  <td>main@1464191502</td>   <td></td> </tr>
 </table>
