--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,13 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">11,654</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">94,468</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">co.VTiger.TestCases.TC_01_CreateOrganizationTest</td><td><a href="#m0">createOrg</a></td><td rowspan="1">1695182411763</td><td rowspan="1">3251</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">DataProvider_1</td><td><a href="#m0">test1</a></td><td rowspan="4">1695268200912</td><td rowspan="4">23348</td></tr><tr class="passedeven"><td><a href="#m1">test1</a></td></tr><tr class="passedeven"><td><a href="#m2">test1</a></td></tr><tr class="passedeven"><td><a href="#m3">test1</a></td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">co.VTiger.TestCases.TC_01_CreateOrganizationTest#createOrg</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">DataProvider_1#test1</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>DEL</td><td>BLR</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">DataProvider_1#test1</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>BOM</td><td>PNQ</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">DataProvider_1#test1</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>DXB</td><td>JFK</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">DataProvider_1#test1</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>HYD</td><td>CNN</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
