--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\pvpat\AppData\Local\Temp\testng-eclipse-1019588556\testng-customsuite.xml</span>
+                    <span>C:\Users\pvpat\AppData\Local\Temp\testng-eclipse--1655646561\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,7 +103,22 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="co.VTiger.TestCases.TC_01_CreateOrganizationTest" class="method navigator-link" hash-for-method="createOrg">createOrg</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="DataProvider_1" class="method navigator-link" hash-for-method="test1(DEL, BLR)">test1(DEL, BLR)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="DataProvider_1" class="method navigator-link" hash-for-method="test1(BOM, PNQ)">test1(BOM, PNQ)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="DataProvider_1" class="method navigator-link" hash-for-method="test1(DXB, JFK)">test1(DXB, JFK)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="DataProvider_1" class="method navigator-link" hash-for-method="test1(HYD, CNN)">test1(HYD, CNN)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +136,39 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">co.VTiger.TestCases.TC_01_CreateOrganizationTest</span>
+              <span class="class-name">DataProvider_1</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="createOrg">
-                  </a> <!-- createOrg -->
-                  <span class="method-name">createOrg</span>
+                  <a name="test1(DEL, BLR)">
+                  </a> <!-- test1(DEL, BLR) -->
+                  <span class="method-name">test1</span>
+                  <span class="parameters">(DEL,BLR)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="test1(BOM, PNQ)">
+                  </a> <!-- test1(BOM, PNQ) -->
+                  <span class="method-name">test1</span>
+                  <span class="parameters">(BOM,PNQ)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="test1(DXB, JFK)">
+                  </a> <!-- test1(DXB, JFK) -->
+                  <span class="method-name">test1</span>
+                  <span class="parameters">(DXB,JFK)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="test1(HYD, CNN)">
+                  </a> <!-- test1(HYD, CNN) -->
+                  <span class="method-name">test1</span>
+                  <span class="parameters">(HYD,CNN)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +176,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\pvpat\AppData\Local\Temp\testng-eclipse-1019588556\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\pvpat\AppData\Local\Temp\testng-eclipse--1655646561\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,11 +185,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;co.VTiger.TestCases.TC_01_CreateOrganizationTest&quot;&gt;
+      &lt;class name=&quot;DataProvider_1&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;createOrg&quot;/&gt;
+          &lt;include name=&quot;test1&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- co.VTiger.TestCases.TC_01_CreateOrganizationTest --&gt;
+      &lt;/class&gt; &lt;!-- DataProvider_1 --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -189,16 +229,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(4);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'createOrg')
-data.setCell(0, 2, 'co.VTiger.TestCases.TC_01_CreateOrganizationTest')
-data.setCell(0, 3, 3251);
+data.setCell(0, 1, 'test1')
+data.setCell(0, 2, 'DataProvider_1')
+data.setCell(0, 3, 24821);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'test1')
+data.setCell(1, 2, 'DataProvider_1')
+data.setCell(1, 3, 23348);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'test1')
+data.setCell(2, 2, 'DataProvider_1')
+data.setCell(2, 3, 23240);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'test1')
+data.setCell(3, 2, 'DataProvider_1')
+data.setCell(3, 3, 22924);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 3 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -224,18 +276,22 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">co.VTiger.TestCases.TC_01_CreateOrganizationTest</div> <!-- chronological-class-name -->
-              <div class="configuration-class before">
-                <span class="method-name">launchBrowser</span>
-                <span class="method-start">0 ms</span>
-              </div> <!-- configuration-class before -->
-              <div class="configuration-method before">
-                <span class="method-name">loginToApp</span>
-                <span class="method-start">3600 ms</span>
-              </div> <!-- configuration-method before -->
+              <div class="chronological-class-name">DataProvider_1</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">createOrg</span>
-                <span class="method-start">8383 ms</span>
+                <span class="method-name">test1(BOM, PNQ)</span>
+                <span class="method-start">0 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">test1(DEL, BLR)</span>
+                <span class="method-start">24830 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">test1(HYD, CNN)</span>
+                <span class="method-start">48178 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">test1(DXB, JFK)</span>
+                <span class="method-start">71488 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
