--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d2a27f">  <td>23/09/20 09:30:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchBrowser()[pri:0, instance:co.VTiger.TestCases.TC_01_CreateOrganizationTest@449a4f23]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1464191502</td>   <td></td> </tr>
-<tr bgcolor="939c60">  <td>23/09/20 09:30:11</td>   <td>8378</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01_CreateOrganizationTest.createOrg()[pri:0, instance:co.VTiger.TestCases.TC_01_CreateOrganizationTest@449a4f23]">createOrg</td> 
-  <td>main@1464191502</td>   <td></td> </tr>
-<tr bgcolor="d2a27f">  <td>23/09/20 09:30:06</td>   <td>3596</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.loginToApp()[pri:0, instance:co.VTiger.TestCases.TC_01_CreateOrganizationTest@449a4f23]">&gt;&gt;loginToApp</td> 
-<td>&nbsp;</td>  <td>main@1464191502</td>   <td></td> </tr>
+<tr bgcolor="836cb8">  <td>23/09/21 09:20:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProvider_1.test1(java.lang.String,java.lang.String)[pri:0, instance:DataProvider_1@791f145a]">test1</td> 
+  <td>main@246273275</td>   <td></td> </tr>
+<tr bgcolor="836cb8">  <td>23/09/21 09:20:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProvider_1.test1(java.lang.String,java.lang.String)[pri:0, instance:DataProvider_1@791f145a]">test1</td> 
+  <td>main@246273275</td>   <td></td> </tr>
+<tr bgcolor="836cb8">  <td>23/09/21 09:20:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProvider_1.test1(java.lang.String,java.lang.String)[pri:0, instance:DataProvider_1@791f145a]">test1</td> 
+  <td>main@246273275</td>   <td></td> </tr>
+<tr bgcolor="836cb8">  <td>23/09/21 09:20:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProvider_1.test1(java.lang.String,java.lang.String)[pri:0, instance:DataProvider_1@791f145a]">test1</td> 
+  <td>main@246273275</td>   <td></td> </tr>
 </table>
