--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,28 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="686771">  <td>23/09/18 09:15:08</td>   <td>0</td> <td title="&lt;&lt;Base.afterSuite()[pri:0, instance:before_after.Test_3@6e9175d8]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@429075478</td>   <td></td> </tr>
-<tr bgcolor="686771">  <td>23/09/18 09:15:08</td>   <td>-78</td> <td>&nbsp;</td><td title="&lt;&lt;Base.afterTest()[pri:0, instance:before_after.Test_3@6e9175d8]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@429075478</td>   <td></td> </tr>
-<tr bgcolor="686771">  <td>23/09/18 09:15:08</td>   <td>-127</td> <td title="&gt;&gt;Base.beforeSuite()[pri:0, instance:before_after.Test_3@6e9175d8]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@429075478</td>   <td></td> </tr>
-<tr bgcolor="686771">  <td>23/09/18 09:15:08</td>   <td>-119</td> <td>&nbsp;</td><td title="&gt;&gt;Base.beforeTest()[pri:0, instance:before_after.Test_3@6e9175d8]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@429075478</td>   <td></td> </tr>
-<tr bgcolor="686771">  <td>23/09/18 09:15:08</td>   <td>-80</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.closeBrowser()[pri:0, instance:before_after.Test_3@6e9175d8]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@429075478</td>   <td></td> </tr>
-<tr bgcolor="686771">  <td>23/09/18 09:15:08</td>   <td>-105</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.launchBrowser()[pri:0, instance:before_after.Test_3@6e9175d8]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@429075478</td>   <td></td> </tr>
-<tr bgcolor="686771">  <td>23/09/18 09:15:08</td>   <td>-81</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.logOut()[pri:0, instance:before_after.Test_3@6e9175d8]">&lt;&lt;logOut</td> 
-<td>&nbsp;</td>  <td>main@429075478</td>   <td></td> </tr>
-<tr bgcolor="686771">  <td>23/09/18 09:15:08</td>   <td>-81</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.logOut()[pri:0, instance:before_after.Test_3@6e9175d8]">&lt;&lt;logOut</td> 
-<td>&nbsp;</td>  <td>main@429075478</td>   <td></td> </tr>
-<tr bgcolor="686771">  <td>23/09/18 09:15:08</td>   <td>-85</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.login()[pri:0, instance:before_after.Test_3@6e9175d8]">&gt;&gt;login</td> 
-<td>&nbsp;</td>  <td>main@429075478</td>   <td></td> </tr>
-<tr bgcolor="686771">  <td>23/09/18 09:15:08</td>   <td>-85</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.login()[pri:0, instance:before_after.Test_3@6e9175d8]">&gt;&gt;login</td> 
-<td>&nbsp;</td>  <td>main@429075478</td>   <td></td> </tr>
-<tr bgcolor="d2a27f">  <td>23/09/18 09:15:08</td>   <td>-94</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_3.script()[pri:0, instance:before_after.Test_3@6e9175d8]">script</td> 
-  <td>main@429075478</td>   <td></td> </tr>
-<tr bgcolor="d2a27f">  <td>23/09/18 09:15:08</td>   <td>-85</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_3.script_1()[pri:0, instance:before_after.Test_3@6e9175d8]">script_1</td> 
-  <td>main@429075478</td>   <td></td> </tr>
+<tr bgcolor="976fbc">  <td>23/09/21 08:42:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.closeBrowser()[pri:0, instance:co.VTiger.TestCases.TC_02_CreateOrganizationWIthDDTest@74ea2410]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=Test2-2@121308514</td>   <td></td> </tr>
+<tr bgcolor="976fbc">  <td>23/09/21 08:42:35</td>   <td>5508</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.closeBrowser()[pri:0, instance:co.VTiger.TestCases.TC_01_CreateOrganizationTest@4b741d6d]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=Test2-1@944108947</td>   <td></td> </tr>
+<tr bgcolor="85a2de">  <td>23/09/21 08:42:30</td>   <td>-176</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01_CreateOrganizationTest.createOrg(java.lang.String)[pri:0, instance:co.VTiger.TestCases.TC_01_CreateOrganizationTest@4b741d6d]">createOrg</td> 
+  <td>TestNG-test=Test2-1@944108947</td>   <td></td> </tr>
+<tr bgcolor="e1dd88">  <td>23/09/21 08:42:30</td>   <td>-5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_02_CreateOrganizationWIthDDTest.createOrgwithDD()[pri:0, instance:co.VTiger.TestCases.TC_02_CreateOrganizationWIthDDTest@74ea2410]">createOrgwithDD</td> 
+  <td>TestNG-test=Test2-2@121308514</td>   <td></td> </tr>
+<tr bgcolor="976fbc">  <td>23/09/21 08:42:11</td>   <td>-18733</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchBrowser(java.lang.String)[pri:0, instance:co.VTiger.TestCases.TC_02_CreateOrganizationWIthDDTest@74ea2410]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=Test2-2@121308514</td>   <td></td> </tr>
+<tr bgcolor="976fbc">  <td>23/09/21 08:42:11</td>   <td>-18733</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchBrowser(java.lang.String)[pri:0, instance:co.VTiger.TestCases.TC_01_CreateOrganizationTest@4b741d6d]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=Test2-1@944108947</td>   <td></td> </tr>
+<tr bgcolor="976fbc">  <td>23/09/21 08:42:18</td>   <td>-11779</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.loginToApp()[pri:0, instance:co.VTiger.TestCases.TC_02_CreateOrganizationWIthDDTest@74ea2410]">&gt;&gt;loginToApp</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test2-2@121308514</td>   <td></td> </tr>
+<tr bgcolor="976fbc">  <td>23/09/21 08:42:18</td>   <td>-11456</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.loginToApp()[pri:0, instance:co.VTiger.TestCases.TC_01_CreateOrganizationTest@4b741d6d]">&gt;&gt;loginToApp</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test2-1@944108947</td>   <td></td> </tr>
 </table>
