--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,20 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="976fbc">  <td>23/09/21 08:42:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.closeBrowser()[pri:0, instance:co.VTiger.TestCases.TC_02_CreateOrganizationWIthDDTest@74ea2410]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=Test2-2@121308514</td>   <td></td> </tr>
-<tr bgcolor="85a2de">  <td>23/09/21 08:42:30</td>   <td>-176</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01_CreateOrganizationTest.createOrg(java.lang.String)[pri:0, instance:co.VTiger.TestCases.TC_01_CreateOrganizationTest@4b741d6d]">createOrg</td> 
-  <td>TestNG-test=Test2-1@944108947</td>   <td></td> </tr>
-<tr bgcolor="976fbc">  <td>23/09/21 08:42:35</td>   <td>5508</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.closeBrowser()[pri:0, instance:co.VTiger.TestCases.TC_01_CreateOrganizationTest@4b741d6d]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=Test2-1@944108947</td>   <td></td> </tr>
-<tr bgcolor="976fbc">  <td>23/09/21 08:42:11</td>   <td>-18733</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchBrowser(java.lang.String)[pri:0, instance:co.VTiger.TestCases.TC_02_CreateOrganizationWIthDDTest@74ea2410]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=Test2-2@121308514</td>   <td></td> </tr>
-<tr bgcolor="976fbc">  <td>23/09/21 08:42:11</td>   <td>-18733</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchBrowser(java.lang.String)[pri:0, instance:co.VTiger.TestCases.TC_01_CreateOrganizationTest@4b741d6d]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=Test2-1@944108947</td>   <td></td> </tr>
-<tr bgcolor="976fbc">  <td>23/09/21 08:42:18</td>   <td>-11779</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.loginToApp()[pri:0, instance:co.VTiger.TestCases.TC_02_CreateOrganizationWIthDDTest@74ea2410]">&gt;&gt;loginToApp</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test2-2@121308514</td>   <td></td> </tr>
-<tr bgcolor="e1dd88">  <td>23/09/21 08:42:30</td>   <td>-5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_02_CreateOrganizationWIthDDTest.createOrgwithDD()[pri:0, instance:co.VTiger.TestCases.TC_02_CreateOrganizationWIthDDTest@74ea2410]">createOrgwithDD</td> 
-  <td>TestNG-test=Test2-2@121308514</td>   <td></td> </tr>
-<tr bgcolor="976fbc">  <td>23/09/21 08:42:18</td>   <td>-11456</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.loginToApp()[pri:0, instance:co.VTiger.TestCases.TC_01_CreateOrganizationTest@4b741d6d]">&gt;&gt;loginToApp</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test2-1@944108947</td>   <td></td> </tr>
+<tr bgcolor="d2a27f">  <td>23/09/26 11:03:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DemoTest.demo1()[pri:0, instance:sample.DemoTest@783a467b]">demo1</td> 
+  <td>main@1396431506</td>   <td></td> </tr>
 </table>
