--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="836cb8">  <td>23/09/26 11:02:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DemoTest.demo1()[pri:0, instance:sample.DemoTest@2d52216b]">demo1</td> 
-  <td>main@633240419</td>   <td></td> </tr>
+<tr bgcolor="d2a27f">  <td>23/09/27 13:20:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.closeBrowser()[pri:0, instance:co.VTiger.TestCases.TC_01_CreateOrganizationTest@5b1669c0]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1020154737</td>   <td></td> </tr>
+<tr bgcolor="939c60">  <td>23/09/27 13:20:37</td>   <td>-4233</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01_CreateOrganizationTest.createOrg()[pri:0, instance:co.VTiger.TestCases.TC_01_CreateOrganizationTest@5b1669c0]">createOrg</td> 
+  <td>main@1020154737</td>   <td></td> </tr>
+<tr bgcolor="d2a27f">  <td>23/09/27 13:20:26</td>   <td>-15109</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchBrowser()[pri:0, instance:co.VTiger.TestCases.TC_01_CreateOrganizationTest@5b1669c0]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1020154737</td>   <td></td> </tr>
+<tr bgcolor="d2a27f">  <td>23/09/27 13:20:34</td>   <td>-6915</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.loginToApp()[pri:0, instance:co.VTiger.TestCases.TC_01_CreateOrganizationTest@5b1669c0]">&gt;&gt;loginToApp</td> 
+<td>&nbsp;</td>  <td>main@1020154737</td>   <td></td> </tr>
 </table>
